# nexis-ml

./: .gitattributes  .gitignore  CHANGELOG.md  PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/nexis_ml/: __init__.py  cli.py  config.py  device.py  harness.py  inference.py  protocol.py  report.py  run_store.py
src/nexis_ml/templates/: __init__.py
src/nexis_ml/templates/blank/: README.md  train.py  train.toml
src/nexis_ml/templates/image/: README.md  train.py  train.toml
src/nexis_ml/templates/tabular/: README.md  train.py  train.toml
src/nexis_ml/templates/textgen/: README.md  train.py  train.toml
src/nexis_ml/templates/textgen/data/: input.txt
tests/: test_cli.py  test_config.py  test_device.py  test_harness.py  test_inference.py  test_protocol.py  test_report.py  test_run_store.py
