[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexis-ml"
# Single-sourced from src/nexis_ml/__init__.py (__version__)
dynamic = ["version"]
description = "Hobby-grade ML engine for the Nexis terminal - train small models on small data and stream live metrics."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Ryan Wetzstein" }]
keywords = ["nexis", "machine-learning", "pytorch", "experiment-tracking"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core is stdlib-only by design: the protocol, run store, harness, and CLI
# must work without torch so detection/replay/runs stay instant. Templates
# are what need the heavy framework - hence the extra.
dependencies = []

[project.optional-dependencies]
# numpy isn't used directly, but torch warns on startup without it.
# Pillow loads/saves images for the `image` template (and its sample grid).
torch = ["torch>=2.6", "numpy", "Pillow>=10"]
dev = ["pytest>=8", "ruff"]

[project.scripts]
nexis-ml = "nexis_ml.cli:main"

[project.urls]
Homepage = "https://github.com/rwetz/nexis-ml"
Issues = "https://github.com/rwetz/nexis-ml/issues"

[tool.hatch.version]
path = "src/nexis_ml/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nexis_ml"]

[tool.pytest.ini_options]
# Only collect the real suite — keep scratch/ demo projects out of a
# bare `pytest` run (they aren't tests and some call sys.exit()).
testpaths = ["tests"]
